views/partials/header comment out unused code

--- a/mongoose-project-2/views/partials/header.ejs
+++ b/mongoose-project-2/views/partials/header.ejs
@@ -9,11 +9,11 @@
 </head>
 <body>
 <nav>
-    <a href="" <%- title === '' ? 'class="active"' : '' %>>###</a>
+    <!-- <a href="" <%- title === '' ? 'class="active"' : '' %>>###</a> -->
     <% if (user) { %>
-        <a href="" <%- title === '' ? 'class="active"' : '' %>>
+        <!-- <a href="" <%- title === '' ? 'class="active"' : '' %>>
             ###</a>
-        <a href="" <%- title === '' ? 'class="active"' : '' %>>###</a>
+        <a href="" <%- title === '' ? 'class="active"' : '' %>>###</a> -->
         <a href="/logout">LOG OUT</a>
     <% } else { %>
         <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
