--- a/mongoose-project-2/views/partials/header.ejs
+++ b/mongoose-project-2/views/partials/header.ejs
@@ -16,6 +16,6 @@
         <a href="" <%- title === '' ? 'class="active"' : '' %>>###</a> -->
         <a href="/logout">LOG OUT</a>
     <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <a href="/auth/google" class="login">LOG IN&nbsp;</a>
     <% } %>
 </nav>
