update header with links to my decks and new deck. add link to plus button views/decks/index

--- a/mongoose-project-2/views/decks/index.ejs
+++ b/mongoose-project-2/views/decks/index.ejs
@@ -1,4 +1,4 @@
 <%- include('../partials/header') %>
 
 <h1>my decks</h1>
-<div><button>+</button></div>
+<div><button a href="/decks/new">+</button></div>
