show all decks, views/decks/index. Add isloggedin to routes

--- a/mongoose-project-2/views/decks/index.ejs
+++ b/mongoose-project-2/views/decks/index.ejs
@@ -1,4 +1,9 @@
 <%- include('../partials/header') %>
 
 <h1>my decks</h1>
-<div><button a href="/decks/new">+</button></div>
+<% decks.forEach(function(d) { %>
+    <% if (user && user._id.equals(d.user)) { %>
+        <button a href = "/decks/<%= d._id %>"><%= d.deckName %></button>
+    <% } %>
+<% }); %>
+<div><button a href="/decks">+</button></div>
