fix plus button views/decks/index, now it links to decks/new

--- a/mongoose-project-2/views/decks/index.ejs
+++ b/mongoose-project-2/views/decks/index.ejs
@@ -6,4 +6,8 @@
         <button a href = "/decks/<%= d._id %>"><%= d.deckName %></button>
     <% } %>
 <% }); %>
-<div><button a href="/decks">+</button></div>
+<div>
+    <form action="/decks/new">
+        <input type="submit" value="+">
+    </form>
+</div>
