--- a/mongoose-project-2/views/decks/edit.ejs
+++ b/mongoose-project-2/views/decks/edit.ejs
@@ -1,3 +1,26 @@
 <%- include('../partials/header') %>
 
-<h1><%= deck.deckName %>></h1>
+<h1><%= deck.deckName %> deck</h1>
+
+<h2>New Card</h2>
+
+<form id="add-card-form" action="/cards/new" method="POST">
+    <label>Question</label>
+    <input name = "question" type = "string">
+    <br>
+    <label>Answer</label>
+    <input name = "answer" type = "string">
+    <br>
+    <input type = "submit" value = "add">
+</form>
+
+<h2>My Cards</h2>
+
+<% if (deck.cards.length) { %>
+    <% deck.cards.forEach(function(card){ %>
+        <div>Question: <%= card.question%></div>
+        <div>Answer: <%= card.answer%></div>
+    <% }); %>    
+<% } else { %>
+    <div>There are no cards in this deck yet</div>
+<% }; %>
