add delete and edit forms/buttons to views/decks/edits each card

--- a/mongoose-project-2/views/decks/edit.ejs
+++ b/mongoose-project-2/views/decks/edit.ejs
@@ -22,6 +22,15 @@
     <% deck.cards.forEach(function(card){ %>
         <div>Question: <%= card.question%></div>
         <div>Answer: <%= card.answer%></div>
+        <form action="/<%= deck._id %>/cards?_method=DELETE"
+            class="delete-card" method="POST">
+            <button type="submit">delete</button>
+        </form>
+        <form action="/<%= deck._id %>/cards/edit?_method=PUT"
+            class="delete-card" method="POST">
+            <button type="submit">edit</button>
+        </form>
+        <br>
     <% }); %>    
 <% } else { %>
     <div>There are no cards in this deck yet</div>
