create data pathway to render views/decks/show.ejs, show.ejs only has header but is linked to the selected data object

--- a/mongoose-project-2/views/decks/index.ejs
+++ b/mongoose-project-2/views/decks/index.ejs
@@ -9,11 +9,7 @@
 
 <% decks.forEach(function(m) { %>
     <% if (user && user._id.equals(m.user)) { %>
-        <div>
-            <form action="/decks">
-                <input type="submit" value="<%= m.deckName %>">
-            </form>
-        <!-- </div><button><%= m.deckName %></button> -->
+        <div><a href="/decks/<%= m._id %>"><%= m.deckName %></a></div>
       <% } %>
 <% }); %>
 
