add comments to views/decks/show, plan for the actual card views

--- a/mongoose-project-2/views/decks/show.ejs
+++ b/mongoose-project-2/views/decks/show.ejs
@@ -1,3 +1,17 @@
 <%- include('../partials/header') %>
 
+<!-- form delete deck
+form edit deck -->
+
 <h1><%= deck.deckName%></h1>
+
+<!-- <div class = "card-container">
+    <div>
+        card front
+        card back
+    </div>
+</div> -->
+
+<!-- button: back
+button: flip
+button: next -->
