update views/index.ejs header and title to get flashed. Add login button

--- a/mongoose-project-2/views/index.ejs
+++ b/mongoose-project-2/views/index.ejs
@@ -7,6 +7,8 @@
   <body>
     <%- include('partials/header') %>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <form action = "/auth/google" class="login">
+      <input type="submit" value="Login">
+    </form>
   </body>
 </html>
