--- a/mongoose-project-2/views/partials/header.ejs
+++ b/mongoose-project-2/views/partials/header.ejs
@@ -14,6 +14,6 @@
         <a href="/decks/new" <%- title === '' ? 'class="active"' : '' %>>NEW DECK</a>
         <a href="/logout">LOG OUT</a>
     <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;</a>
+        <a href="/auth/google" class="login">LOG IN</a>
     <% } %>
 </nav>
