--- a/mongoose-project-2/views/decks/show.ejs
+++ b/mongoose-project-2/views/decks/show.ejs
@@ -1,7 +1,6 @@
 <%- include('../partials/header') %>
 
-<!-- form delete deck
-form edit deck -->
+<button><a href="/decks/<%= deck._id %>/edit">Edit Deck</a></button>
 
 <h1><%= deck.deckName%></h1>
 
