change buttons so that they're links containing buttons rather than buttons containing links. Now the whole thing is clickable, not just the inner link

--- a/mongoose-project-2/views/decks/edit.ejs
+++ b/mongoose-project-2/views/decks/edit.ejs
@@ -28,7 +28,7 @@
             <button type="submit">delete</button>
         </form>
 <!-- send info card info to controller, will redirect to edit page         -->
-        <button><a href="/<%= card._id %>/edit">edit</a></button>
+        <a href="/<%= card._id %>/edit"><button>edit</button></a>
         <br>
     <% }); %>    
 <% } else { %>
