--- a/mongoose-project-2/views/decks/show.ejs
+++ b/mongoose-project-2/views/decks/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<button><a href="/decks/<%= deck._id %>/edit">Edit Deck</a></button>
+<a href="/decks/<%= deck._id %>/edit"><button>Edit Deck</button></a>
 
 <h1><%= deck.deckName%></h1>
 
