add view deck button to decks/edit so user can easily view deck cards from the edit page

--- a/mongoose-project-2/views/cards/edit.ejs
+++ b/mongoose-project-2/views/cards/edit.ejs
@@ -10,6 +10,8 @@
     <br><br>
     <label>Answer</label>
     <br>
-    <input type="text" name="answer" value="<%= card.answer%>">
-    <button type="submit">Update Card</button>
+    <div id="card-del-edit">
+        <input type="text" name="answer" value="<%= card.answer%>">
+        <button type="submit">Update Card</button>
+    </div>
   </form>
