--- a/mongoose-project-2/views/decks/edit.ejs
+++ b/mongoose-project-2/views/decks/edit.ejs
@@ -4,6 +4,8 @@
 
 <h2>New Card</h2>
 
+<a href="/decks/<%= deck._id %>"><button>view deck</button></a>
+
 <!-- form to add new card -->
 <form id="add-card-form" action="/<%= deck._id%>/cards/new" method="POST">
     <label>Question</label>
