add displayCard key to deckSchema

--- a/mongoose-project-2/views/decks/show.ejs
+++ b/mongoose-project-2/views/decks/show.ejs
@@ -4,7 +4,7 @@
 
 <h1><%= deck.deckName%></h1>
 
-<div><%= deck.cards%></div>
+<div><%= deck.cards[0].question%></div>
 
 <a href="/decks/<%= deck._id %>"><button>back</button></a>
 <a href="/decks/<%= deck._id %>"><button>flip</button></a>
