update new dive form, add router.post..create

--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -13,7 +13,10 @@
         <input type="String" name="buddy">            
     </label><br>    
     <label>Date
-        <input type="datetime-local" name="date" value="datetime-local">
+        <input type="Date" name="date" value="date">
+    </label><br>
+    <label>Time
+        <input type="String" name="time">
     </label><br>
     <label>Exposure Protection
         <input type="String" name="protection">
@@ -79,4 +82,6 @@
     <label>Notes
         <input type="String" name="notes">
     </label><br>
+
+    <input id="new-dive-button" type="submit" value="Add Dive">
 </form>
