--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -2,7 +2,7 @@
 
 <h1>New Dive</h1>
 
-<form id="new-dive-form" action="/" method="POST">
+<form id="new-dive-form" action="/dives" method="POST">
     <label>Dive Number
         <input type="Number" name="number">
     </label><br>
