add delete dive form to edit page

--- a/views/dives/edit.ejs
+++ b/views/dives/edit.ejs
@@ -91,7 +91,7 @@
 <div>Danger Zone</div>
 
 <!-- delete dive         -->
-<form action="/<%= card._id %>/cards?_method=DELETE"
+<form action="/dives/<%= dive._id %>/delete?_method=DELETE"
     class="delete-card" method="POST">
-    <button type="submit">delete</button>
+    <button type="submit">delete dive</button>
 </form>
