delete function works, dives can be deleted from log

--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -4,7 +4,7 @@
 
 <div>
     <form action="/dives/new">
-        <input type="submit" value="add new dive to log">
+        <input type="submit" value="add new dive">
     </form>
 </div>
 
