add profile router in server

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,1 +1,9 @@
-<%- include('../partials/header') %>
+<%- include('../partials/header') %>\
+
+<h1>My Profile</h1>
+
+<div>
+    <form action="/profiles/edit">
+        <input type="submit" value="get started">
+    </form>
+</div>
