add profile schema and certificate schema to models/profile

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <% if (user) { %>
         <a href="/dives" <%- title === '' ? 'class="active"' : '' %>>MY DIVES</a>
         <a href="/dives/new" <%- title === '' ? 'class="active"' : '' %>>NEW DIVE</a>
-        <a href="/profiles/index" <%- title === '' ? 'class="active"' : '' %>>MY PROFILE</a>
+        <a href="/profile" <%- title === '' ? 'class="active"' : '' %>>MY PROFILE</a>
         <a href="/logout">LOG OUT</a>
     <% } else { %>
         <a href="/auth/google" class="login">LOG IN</a>
