--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,9 +1,14 @@
-<%- include('../partials/header') %>\
+<%- include('../partials/header') %>
 
-<h1>My Profile</h1>
+<h1><%= user.name%></h1>
+
+<div><%= user.name%></div>
+
+<div><%= profile%></div>
 
 <div>
     <form action="/profiles/edit">
         <input type="submit" value="get started">
     </form>
 </div>
+
