add form to profiles/new.ejs ... changed edit ejs to new ejs

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -6,9 +6,5 @@
 
 <div><%= profile%></div>
 
-<div>
-    <form action="/profiles/edit">
-        <input type="submit" value="get started">
-    </form>
-</div>
+<a href="/profile/edit"><button>Edit Log</button></a>
 
