controllers/profiles create function works

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -6,5 +6,5 @@
 
 <div><%= profile%></div>
 
-<a href="/profile/edit"><button>Edit Log</button></a>
+<a href="/profile/edit"><button>Add Information</button></a>
 
