--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -4,7 +4,7 @@
 
 <form id="new-dive-form" action="/profile" method="POST">
     <label>Username
-        <input type="String" name="">
+        <input type="String" name="nickname">
     </label><br>
     <label>When did you start diving?
         <input type="String" name="startDate">            
