--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -3,6 +3,9 @@
 <h1><%= user.name%></h1>
 
 <% if (profile) { %>
+    
+    <img src="<%= user.avatar %>">
+
     <div>Username:</div>
     <div><%= profile.nickname%></div>    
 
