add profiles/certs.ejs to views, add router .cert, and cert function to controller

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -49,5 +49,5 @@
 
     <% } else { %>
         <br>
-        <a href=""><button>Add Certifications</button></a>
+        <a href="/profile/certs"><button>Add Certifications</button></a>
     <% }; %>
