--- a/views/profiles/certs.ejs
+++ b/views/profiles/certs.ejs
@@ -16,11 +16,18 @@
 <% profile.certs.forEach(function(c) { %>
     <table>
         <thead>
+            <th>&nbsp</th>
             <th>Certificate</th>
             <th>Expiry</th>
         </thead>
         <tbody>
             <tr>
+                <td class="remove-column">
+                    <form action="/profile/cert/<%= c._id%>?_method=DELETE"
+                        class="delete-cert-form" method="POST">
+                        <button type="submit">X</button>
+                    </form>
+                        </td>
                 <td><%= c.cert %></td>
                 <td><%= c.expiration %></td>
             </tr>
