change add/delete button profiles/index

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -41,9 +41,12 @@
                 </tr>
             </tbody>
         </table>
+
+        <a href="/profile/certs"><button>Add / Delete Certifications</button></a>
+
     <% }); %>
 
     <% } else { %>
         <br>
-        <a href="/profile/certs"><button>Add / Delete Certifications</button></a>
+        <a href="/profile/certs"><button>Add</button></a>
     <% }; %>
