--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,91 @@
 body {
+  height: 125vh;
+  margin-top: 40px;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
+  background-color: #DDEAEF;
 }
-
+#index-body {
+  margin-top: 320px;
+}
+header {
+  background-color: #344A53;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+}
+header * {
+  display: inline-flex;
+}
+header li {
+  margin: 20px;
+}
+header li a {
+  text-decoration: none;
+  letter-spacing: 2px;
+  color: white;
+}
+header li a:hover {
+  color: #97AFB9;
+}
+a:hover {
+  color: #344A53;
+}
 a {
-  color: #00B7FF;
+  color: black;
+}
+h1 {
+  color: white;
+  letter-spacing: 10px;
+  position: absolute;
+  top: 200px;
+  margin: 0 auto;
+  font-size: 40px;
+}
+table {
+  border: solid  #344A53;
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  border: 1px solid #344A53;
+  border-collapse: collapse;
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+}
+input, select {
+  padding: 5px;
+  margin: 5px;
+ }
+ form {
+   margin: 5px;
+ }
+
+ /* view/dives/index */
+
+ #add-new-dive {
+  text-align: right;
+}
+#add-new-dive-button {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
+  padding: 10px;
+  border-radius: 20px;
+  border: solid #97AFB9;
+}
+#add-new-dive-button:hover {
+  background-color: #97AFB9;
+  color: white;
+}
+#index-img {
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  width: 100%;
+  max-height: 300px;
+  min-height: 300px;
+  object-fit: cover;
 }
